# retirement_finances

./: .gitignore  README.docx  README.md  TODO.md  build.bat  build.sh  build_windows_installer.bat  create_docx_readme.sh  create_poetry_env.bat  create_poetry_env.sh  create_single_docx_readme.sh  fix_links.lua  hook-nicegui.py  install.py  monthly_spending.md  pyproject.toml  reality_report.md  reports.md  retirement_finances.spec  setup_pension_details.md  setup_savings_accounts.md
installers/: create_zip_files.sh
installers/linux/: README.md  README.txt  install.sh  retirement_finances-3.8-py3-none-any.whl  retirement_finances-3.9-py3-none-any.whl  retirement_finances-4.0-py3-none-any.whl  retirement_finances-4.1-py3-none-any.whl  retirement_finances-4.5-py3-none-any.whl  retirement_finances-4.8-py3-none-any.whl  retirement_finances-4.9-py3-none-any.whl  retirement_finances-5.0-py3-none-any.whl  retirement_finances-5.1-py3-none-any.whl  retirement_finances-5.2-py3-none-any.whl  retirement_finances-5.3-py3-none-any.whl  retirement_finances-5.4-py3-none-any.whl  retirement_finances-5.5-py3-none-any.whl  retirement_finances-5.7-py3-none-any.whl  retirement_finances-5.8-py3-none-any.whl  retirement_finances-5.9-py3-none-any.whl  retirement_finances-6.0-py3-none-any.whl  retirement_finances-6.1-py3-none-any.whl  retirement_finances-6.10-py3-none-any.whl  retirement_finances-6.11-py3-none-any.whl  retirement_finances-6.12-py3-none-any.whl  retirement_finances-6.13-py3-none-any.whl  retirement_finances-6.15-py3-none-any.whl  retirement_finances-6.16-py3-none-any.whl  retirement_finances-6.17-py3-none-any.whl  retirement_finances-6.18-py3-none-any.whl  retirement_finances-6.19-py3-none-any.whl  retirement_finances-6.2-py3-none-any.whl  retirement_finances-6.20-py3-none-any.whl  retirement_finances-6.21-py3-none-any.whl  retirement_finances-6.3-py3-none-any.whl  retirement_finances-6.4-py3-none-any.whl  retirement_finances-6.5-py3-none-any.whl  retirement_finances-6.9-py3-none-any.whl  retirement_finances-7.0-py3-none-any.whl  retirement_finances-7.1-py3-none-any.whl  retirement_finances-7.2-py3-none-any.whl  (+6 more)
installers/macos/: README.md
installers/windows/: .gitignore  README.md  create_launcher.bat  delete_launcher.bat  install.bat  retirement_finances-3.7-py3-none-any.whl  retirement_finances-3.8-py3-none-any.whl  (+10 more)
retirement_finances/: retirement_finances.py
windows_installer/: .gitignore  build.bat  install.bat  launch.bat  retirement_finances.bat  retirement_finances.iss  uninstall.bat
(+2 files in other folders)
