[tool.poetry]
name = "retirement-finances"
version = "6.21"
description = ""
authors = ["Paul Austen <pjaos@gmail.com>"]
readme = "README.md"
packages = [
    { include = "retirement_finances", from = "src" },
]

[tool.poetry.dependencies]
bcrypt = "*"
python = "^3.10"
cryptography = "*"
click = "*"
p3lib = "^1.1.147"
requests = "*"
# nicegui = "^2.21.1" # Does not allow table selection with shift key
nicegui = "2.24.2"
# nicegui 3.0.0 an later requires major changes due to codebase
matplotlib = "*"
plotly = "*"
python-dateutil = "*"
psutil = "*"
pandas = "*"
PyInstaller = "*"

[tool.poetry.scripts]
retirement_finances = "retirement_finances.retirement_finances:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
