[tool.poetry]
name = "retirement-finances"
version = "7.2"
description = ""
authors = ["Paul Austen <pjaos@gmail.com>"]
readme = "README.md"
packages = [
    { include = "retirement_finances", from = "src" },
]

[tool.poetry.dependencies]
bcrypt = "*"
python = "^3.10"
cryptography = "*"
click = "*"
p3lib = "^1.1.147"
requests = "*"
nicegui = "3.5.0"
matplotlib = "*"
plotly = "*"
python-dateutil = "*"
psutil = "*"
pandas = "*"
PyInstaller = "*"

# Windows-only dependencies
pywin32 = { version = "*", markers = "sys_platform == 'win32'" }
pyreadline3 = { version = "*", markers = "sys_platform == 'win32'" }

[tool.poetry.scripts]
retirement_finances = "retirement_finances.retirement_finances:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
